--- a/static/admin/example.css
+++ b/static/admin/example.css
@@ -1,10 +1,16 @@
 html,
 body {
-  color: #444;
-  font-size: 14px;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  color: red;
 }
-
 body {
   padding: 20px;
+}
+
+h1 {
+  font-weight: bold;
+  color: green;
+  font-size: 32px;
+  margin-top: 20px;
 }
